# Take-Home-Assignment

./: .gitignore  README.md
get-papers-list/: README.md  machine_learning_for_brain.csv  main.py  nir spectro.csv  pyproject.toml
get-papers-list/src/get_papers_list/: cli.py  filters.py  filters_llms.py  metadata_extractor.py  processor.py  pubmed_fetcher.py  utils.py
