[project]
name = "get-papers-list"
version = "0.1.0"
description = ""
authors = [
    {name = "RishabhSpark",email = "rishabh1000khandelwal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry.scripts]
get-papers-list = "get_papers_list.cli:main"

[tool.poetry]
packages = [{include = "get_papers_list", from = "src"}]
